// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getPokemonNames > shall return all amber pokemon 1`] = `
[
  "ALTARIA",
  "ARBOK",
  "BAGON",
  "BUTTERFREE",
  "CATERPIE",
  "EKANS",
  "METAPOD",
  "SALAMENCE",
  "SHELGON",
  "CHARJABUG",
  "CLODSIRE",
  "CROAGUNK",
  "DRAGONAIR",
  "DRAGONITE",
  "DRAMPA",
  "DRATINI",
  "GRUBBIN",
  "PINSIR",
  "TOXICROAK",
  "VIKAVOLT",
  "WOOPER_PALDEAN",
  "CRUSTLE",
  "DWEBBLE",
  "GULPIN",
  "HERACROSS",
  "LATIAS",
  "LATIOS",
  "NOIBAT",
  "NOIVERN",
  "SHUCKLE",
  "SWALOT",
  "TOXEL",
  "TOXTRICITY_AMPED",
  "TOXTRICITY_LOW_KEY",
]
`;

exports[`getPokemonNames > shall return all cyan pokemon 1`] = `
[
  "CLEFABLE",
  "CLEFAIRY",
  "CLEFFA",
  "CROCONAW",
  "DODRIO",
  "DODUO",
  "FERALIGATR",
  "MUDKIP",
  "PIPLUP",
  "PRINPLUP",
  "SWABLU",
  "TOTODILE",
  "BLASTOISE",
  "COMFEY",
  "CRAMORANT",
  "CUTIEFLY",
  "DELIBIRD",
  "FARFETCHD",
  "QUAGSIRE",
  "QUAXLY",
  "QUAXWELL",
  "RIBOMBEE",
  "SQUIRTLE",
  "WARTORTLE",
  "WOOPER",
  "BRAVIARY",
  "GOLDUCK",
  "HAWLUCHA",
  "IGGLYBUFF",
  "JIGGLYPUFF",
  "PSYDUCK",
  "RUFFLET",
  "SLOWBRO",
  "SLOWKING",
  "SLOWPOKE",
  "SUICUNE",
  "SYLVEON",
  "TOGEKISS",
  "TOGEPI",
  "TOGETIC",
  "VAPOREON",
  "WIGGLYTUFF",
]
`;

exports[`getPokemonNames > shall return all lapis pokemon 1`] = `
[
  "MEW",
  "BAYLEEF",
  "BLAZIKEN",
  "CHIKORITA",
  "COMBUSKEN",
  "MANKEY",
  "MEGANIUM",
  "MUNNA",
  "MUSHARNA",
  "NATU",
  "PRIMEAPE",
  "XATU",
  "BELLSPROUT",
  "BEWEAR",
  "BULBASAUR",
  "FLORAGATO",
  "IVYSAUR",
  "MIME_JR",
  "MR_MIME",
  "QUAQUAVAL",
  "SPRIGATITO",
  "STUFFUL",
  "VENUSAUR",
  "VICTREEBEL",
  "WEEPINBELL",
  "CRESSELIA",
  "ESPEON",
  "GALLADE",
  "GARDEVOIR",
  "GROTLE",
  "GROVYLE",
  "INFERNAPE",
  "KIRLIA",
  "LEAFEON",
  "LUCARIO",
  "MONFERNO",
  "RALTS",
  "RIOLU",
  "SCEPTILE",
  "TREECKO",
  "TURTWIG",
  "WOBBUFFET",
  "WYNAUT",
]
`;

exports[`getPokemonNames > shall return all pokemon by default 1`] = `
[
  "DARKRAI",
  "MEW",
  "ALTARIA",
  "ARBOK",
  "BAGON",
  "BANETTE",
  "BAYLEEF",
  "BLAZIKEN",
  "BUTTERFREE",
  "CATERPIE",
  "CHIKORITA",
  "CLEFABLE",
  "CLEFAIRY",
  "CLEFFA",
  "COMBUSKEN",
  "CROCONAW",
  "CUBONE",
  "CYNDAQUIL",
  "DODRIO",
  "DODUO",
  "EEVEE_HOLIDAY",
  "EKANS",
  "EMPOLEON",
  "FERALIGATR",
  "HOUNDOOM",
  "HOUNDOUR",
  "MANKEY",
  "MAROWAK",
  "MARSHTOMP",
  "MEGANIUM",
  "METAPOD",
  "MUDKIP",
  "MUNNA",
  "MUSHARNA",
  "NATU",
  "NINETALES",
  "NINETALES_ALOLAN",
  "ONIX",
  "PICHU",
  "PIKACHU",
  "PIKACHU_HALLOWEEN",
  "PIPLUP",
  "PRIMEAPE",
  "PRINPLUP",
  "QUILAVA",
  "RAICHU",
  "RATICATE",
  "RATTATA",
  "SALAMENCE",
  "SEALEO",
  "SHELGON",
  "SHUPPET",
  "SLAKING",
  "SLAKOTH",
  "SNEASEL",
  "SPHEAL",
  "STEELIX",
  "SWABLU",
  "SWAMPERT",
  "TORCHIC",
  "TOTODILE",
  "TYPHLOSION",
  "TYRANTRUM",
  "TYRUNT",
  "VIGOROTH",
  "VULPIX",
  "VULPIX_ALOLAN",
  "WALREIN",
  "WEAVILE",
  "XATU",
  "ABOMASNOW",
  "ABSOL",
  "AGGRON",
  "ARON",
  "BELLSPROUT",
  "BEWEAR",
  "BLASTOISE",
  "BLISSEY",
  "BULBASAUR",
  "CETITAN",
  "CETODDLE",
  "CHANSEY",
  "CHARIZARD",
  "CHARJABUG",
  "CHARMANDER",
  "CHARMELEON",
  "CLODSIRE",
  "COMFEY",
  "CRAMORANT",
  "CROAGUNK",
  "CROCALOR",
  "CUTIEFLY",
  "DELIBIRD",
  "DIGLETT",
  "DITTO",
  "DRAGONAIR",
  "DRAGONITE",
  "DRAMPA",
  "DRATINI",
  "DUGTRIO",
  "FARFETCHD",
  "FLORAGATO",
  "FLYGON",
  "FUECOCO",
  "GASTLY",
  "GENGAR",
  "GEODUDE",
  "GOLEM",
  "GOURGEIST_JUMBO",
  "GOURGEIST_LARGE",
  "GOURGEIST_MEDIUM",
  "GOURGEIST_SMALL",
  "GRAVELER",
  "GRUBBIN",
  "HAPPINY",
  "HAUNTER",
  "IVYSAUR",
  "KANGASKHAN",
  "LAIRON",
  "LARVITAR",
  "LUXIO",
  "LUXRAY",
  "MAWILE",
  "MEOWSCARADA",
  "MIME_JR",
  "MR_MIME",
  "PINSIR",
  "PUMPKABOO_JUMBO",
  "PUMPKABOO_LARGE",
  "PUMPKABOO_MEDIUM",
  "PUMPKABOO_SMALL",
  "PUPITAR",
  "QUAGSIRE",
  "QUAQUAVAL",
  "QUAXLY",
  "QUAXWELL",
  "RIBOMBEE",
  "SHINX",
  "SKELEDIRGE",
  "SNOVER",
  "SPIRITOMB",
  "SPRIGATITO",
  "SQUIRTLE",
  "STUFFUL",
  "TOXICROAK",
  "TRAPINCH",
  "TYRANITAR",
  "VENUSAUR",
  "VIBRAVA",
  "VICTREEBEL",
  "VIKAVOLT",
  "WARTORTLE",
  "WEEPINBELL",
  "WOOPER",
  "WOOPER_PALDEAN",
  "AMPHAROS",
  "ARCANINE",
  "BONSLY",
  "BRAVIARY",
  "CHIMCHAR",
  "CRESSELIA",
  "CRUSTLE",
  "DEDENNE",
  "DRIFBLIM",
  "DRIFLOON",
  "DWEBBLE",
  "EEVEE",
  "EEVEE_HALLOWEEN",
  "ENTEI",
  "ESPEON",
  "FLAAFFY",
  "FLAREON",
  "GALLADE",
  "GARDEVOIR",
  "GLACEON",
  "GOLDUCK",
  "GROTLE",
  "GROVYLE",
  "GROWLITHE",
  "GULPIN",
  "HAWLUCHA",
  "HERACROSS",
  "HONCHKROW",
  "IGGLYBUFF",
  "INFERNAPE",
  "JIGGLYPUFF",
  "JOLTEON",
  "KIRLIA",
  "LATIAS",
  "LATIOS",
  "LEAFEON",
  "LUCARIO",
  "MAGNEMITE",
  "MAGNETON",
  "MAGNEZONE",
  "MAREEP",
  "MEOWTH",
  "MIMIKYU",
  "MINUN",
  "MONFERNO",
  "MURKROW",
  "NOIBAT",
  "NOIVERN",
  "PAWMI",
  "PAWMO",
  "PAWMOT",
  "PERSIAN",
  "PIKACHU_HOLIDAY",
  "PLUSLE",
  "PSYDUCK",
  "RAIKOU",
  "RALTS",
  "RIOLU",
  "RUFFLET",
  "SABLEYE",
  "SANDSHREW",
  "SANDSLASH",
  "SCEPTILE",
  "SHUCKLE",
  "SLOWBRO",
  "SLOWKING",
  "SLOWPOKE",
  "SPHEAL_HOLIDAY",
  "SUDOWOODO",
  "SUICUNE",
  "SWALOT",
  "SYLVEON",
  "TOGEDEMARU",
  "TOGEKISS",
  "TOGEPI",
  "TOGETIC",
  "TORTERRA",
  "TOXEL",
  "TOXTRICITY_AMPED",
  "TOXTRICITY_LOW_KEY",
  "TREECKO",
  "TURTWIG",
  "UMBREON",
  "VAPOREON",
  "WIGGLYTUFF",
  "WOBBUFFET",
  "WYNAUT",
]
`;

exports[`getPokemonNames > shall return all pokemon for multiple islands 1`] = `
[
  "DARKRAI",
  "MEW",
  "BANETTE",
  "BAYLEEF",
  "BLAZIKEN",
  "CHIKORITA",
  "CLEFABLE",
  "CLEFAIRY",
  "CLEFFA",
  "COMBUSKEN",
  "CROCONAW",
  "CUBONE",
  "CYNDAQUIL",
  "DODRIO",
  "DODUO",
  "EEVEE_HOLIDAY",
  "EMPOLEON",
  "FERALIGATR",
  "HOUNDOOM",
  "HOUNDOUR",
  "MANKEY",
  "MAROWAK",
  "MARSHTOMP",
  "MEGANIUM",
  "MUDKIP",
  "MUNNA",
  "MUSHARNA",
  "NATU",
  "NINETALES",
  "NINETALES_ALOLAN",
  "ONIX",
  "PICHU",
  "PIKACHU",
  "PIKACHU_HALLOWEEN",
  "PIPLUP",
  "PRIMEAPE",
  "PRINPLUP",
  "QUILAVA",
  "RAICHU",
  "RATICATE",
  "RATTATA",
  "SEALEO",
  "SHUPPET",
  "SLAKING",
  "SLAKOTH",
  "SNEASEL",
  "SPHEAL",
  "STEELIX",
  "SWABLU",
  "SWAMPERT",
  "TORCHIC",
  "TOTODILE",
  "TYPHLOSION",
  "TYRANTRUM",
  "TYRUNT",
  "VIGOROTH",
  "VULPIX",
  "VULPIX_ALOLAN",
  "WALREIN",
  "WEAVILE",
  "XATU",
  "ABOMASNOW",
  "ABSOL",
  "AGGRON",
  "ARON",
  "BELLSPROUT",
  "BEWEAR",
  "BLASTOISE",
  "BLISSEY",
  "BULBASAUR",
  "CETITAN",
  "CETODDLE",
  "CHANSEY",
  "CHARIZARD",
  "CHARMANDER",
  "CHARMELEON",
  "COMFEY",
  "CRAMORANT",
  "CROCALOR",
  "CUTIEFLY",
  "DELIBIRD",
  "DIGLETT",
  "DITTO",
  "DUGTRIO",
  "FARFETCHD",
  "FLORAGATO",
  "FLYGON",
  "FUECOCO",
  "GASTLY",
  "GENGAR",
  "GEODUDE",
  "GOLEM",
  "GOURGEIST_JUMBO",
  "GOURGEIST_LARGE",
  "GOURGEIST_MEDIUM",
  "GOURGEIST_SMALL",
  "GRAVELER",
  "HAPPINY",
  "HAUNTER",
  "IVYSAUR",
  "KANGASKHAN",
  "LAIRON",
  "LARVITAR",
  "LUXIO",
  "LUXRAY",
  "MAWILE",
  "MEOWSCARADA",
  "MIME_JR",
  "MR_MIME",
  "PUMPKABOO_JUMBO",
  "PUMPKABOO_LARGE",
  "PUMPKABOO_MEDIUM",
  "PUMPKABOO_SMALL",
  "PUPITAR",
  "QUAGSIRE",
  "QUAQUAVAL",
  "QUAXLY",
  "QUAXWELL",
  "RIBOMBEE",
  "SHINX",
  "SKELEDIRGE",
  "SNOVER",
  "SPIRITOMB",
  "SPRIGATITO",
  "SQUIRTLE",
  "STUFFUL",
  "TRAPINCH",
  "TYRANITAR",
  "VENUSAUR",
  "VIBRAVA",
  "VICTREEBEL",
  "WARTORTLE",
  "WEEPINBELL",
  "WOOPER",
  "AMPHAROS",
  "ARCANINE",
  "BONSLY",
  "BRAVIARY",
  "CHIMCHAR",
  "CRESSELIA",
  "DEDENNE",
  "DRIFBLIM",
  "DRIFLOON",
  "EEVEE",
  "EEVEE_HALLOWEEN",
  "ENTEI",
  "ESPEON",
  "FLAAFFY",
  "FLAREON",
  "GALLADE",
  "GARDEVOIR",
  "GLACEON",
  "GOLDUCK",
  "GROTLE",
  "GROVYLE",
  "GROWLITHE",
  "HAWLUCHA",
  "HONCHKROW",
  "IGGLYBUFF",
  "INFERNAPE",
  "JIGGLYPUFF",
  "JOLTEON",
  "KIRLIA",
  "LEAFEON",
  "LUCARIO",
  "MAGNEMITE",
  "MAGNETON",
  "MAGNEZONE",
  "MAREEP",
  "MEOWTH",
  "MIMIKYU",
  "MINUN",
  "MONFERNO",
  "MURKROW",
  "PAWMI",
  "PAWMO",
  "PAWMOT",
  "PERSIAN",
  "PIKACHU_HOLIDAY",
  "PLUSLE",
  "PSYDUCK",
  "RAIKOU",
  "RALTS",
  "RIOLU",
  "RUFFLET",
  "SABLEYE",
  "SANDSHREW",
  "SANDSLASH",
  "SCEPTILE",
  "SLOWBRO",
  "SLOWKING",
  "SLOWPOKE",
  "SPHEAL_HOLIDAY",
  "SUDOWOODO",
  "SUICUNE",
  "SYLVEON",
  "TOGEDEMARU",
  "TOGEKISS",
  "TOGEPI",
  "TOGETIC",
  "TORTERRA",
  "TREECKO",
  "TURTWIG",
  "UMBREON",
  "VAPOREON",
  "WIGGLYTUFF",
  "WOBBUFFET",
  "WYNAUT",
]
`;

exports[`getPokemonNames > shall return all power plant pokemon 1`] = `
[
  "BANETTE",
  "EMPOLEON",
  "PICHU",
  "PIKACHU",
  "PIKACHU_HALLOWEEN",
  "RAICHU",
  "SHUPPET",
  "STEELIX",
  "AGGRON",
  "ARON",
  "GASTLY",
  "GENGAR",
  "GOURGEIST_JUMBO",
  "GOURGEIST_LARGE",
  "GOURGEIST_MEDIUM",
  "GOURGEIST_SMALL",
  "HAUNTER",
  "LAIRON",
  "LUXIO",
  "LUXRAY",
  "MAWILE",
  "PUMPKABOO_JUMBO",
  "PUMPKABOO_LARGE",
  "PUMPKABOO_MEDIUM",
  "PUMPKABOO_SMALL",
  "SHINX",
  "SKELEDIRGE",
  "AMPHAROS",
  "DEDENNE",
  "DRIFBLIM",
  "DRIFLOON",
  "FLAAFFY",
  "JOLTEON",
  "MAGNEMITE",
  "MAGNETON",
  "MAGNEZONE",
  "MAREEP",
  "MIMIKYU",
  "MINUN",
  "PAWMI",
  "PAWMO",
  "PAWMOT",
  "PIKACHU_HOLIDAY",
  "PLUSLE",
  "RAIKOU",
  "TOGEDEMARU",
]
`;

exports[`getPokemonNames > shall return all snowdrop pokemon 1`] = `
[
  "DARKRAI",
  "EEVEE_HOLIDAY",
  "HOUNDOOM",
  "HOUNDOUR",
  "NINETALES_ALOLAN",
  "RATICATE",
  "RATTATA",
  "SEALEO",
  "SLAKING",
  "SLAKOTH",
  "SNEASEL",
  "SPHEAL",
  "VIGOROTH",
  "VULPIX_ALOLAN",
  "WALREIN",
  "WEAVILE",
  "ABOMASNOW",
  "ABSOL",
  "BLISSEY",
  "CETITAN",
  "CETODDLE",
  "CHANSEY",
  "DITTO",
  "HAPPINY",
  "KANGASKHAN",
  "MEOWSCARADA",
  "SNOVER",
  "SPIRITOMB",
  "TYRANITAR",
  "EEVEE",
  "EEVEE_HALLOWEEN",
  "GLACEON",
  "HONCHKROW",
  "MEOWTH",
  "MURKROW",
  "PERSIAN",
  "SABLEYE",
  "SPHEAL_HOLIDAY",
  "UMBREON",
]
`;

exports[`getPokemonNames > shall return all taupe pokemon 1`] = `
[
  "CUBONE",
  "CYNDAQUIL",
  "MAROWAK",
  "MARSHTOMP",
  "NINETALES",
  "ONIX",
  "QUILAVA",
  "SWAMPERT",
  "TORCHIC",
  "TYPHLOSION",
  "TYRANTRUM",
  "TYRUNT",
  "VULPIX",
  "CHARIZARD",
  "CHARMANDER",
  "CHARMELEON",
  "CROCALOR",
  "DIGLETT",
  "DUGTRIO",
  "FLYGON",
  "FUECOCO",
  "GEODUDE",
  "GOLEM",
  "GRAVELER",
  "LARVITAR",
  "PUPITAR",
  "TRAPINCH",
  "VIBRAVA",
  "ARCANINE",
  "BONSLY",
  "CHIMCHAR",
  "ENTEI",
  "FLAREON",
  "GROWLITHE",
  "SANDSHREW",
  "SANDSLASH",
  "SUDOWOODO",
  "TORTERRA",
]
`;
